pages/courseMain/courseMain.css
.full-screen {
	height: calc(100vh - 56px);
	width: 185vw;
	position: fixed;
	margin-top: 56px;
}


#course {
	position: fixed;
	display: flex;
	flex-direction: row;
	height: 100vh;
	width: 185vw;
	left: -85vw;
	flex: 0;
}


.menu {
	position: fixed;
	left: -85vw;
	width: 85vw;

	height: 100vh;
	background-color: white;
	/* color: white; */
	overflow-y: scroll;
}

.main-content {
	position: fixed;
	width: 100vw;
	height: 100%;
	transition: all 5s;
	left: 0;
}

.column-container {
	display: flex;
	flex-direction: column;
}

.row-container {
	display: flex;
	flex-direction: row;
}

.top-bar {
	position:fixed;
	top:0;
	left: 0;
	width: 100vw;
	height: 56px;
	background-color: white;
	justify-content: space-between;
	align-items: center;
}

.search-bar {
	transition: all 500ms;
	height: 56px;
	width: 100%;
}

.department-select {
	width: 15vw;
	align-items: center;
	justify-content: center;
}

.search-select{
	width: 15vw;
	align-items: center;
	justify-content: center;
}

.suggest-list {
	position: fixed;
	left: 0;
	top:56px;
	background-color: white;
	height: calc(100% - 56px) !important;
	width: 100vw;
	z-index:15;
}

.icon {
	font-size: 30px;
	color: #9B0000;
	transition: all 3s ease;
}

.filter-box {
	height: 50px;
	width: 100vw;
	align-items: center;
	background-color: white;
	border: #F5F5F5 0.5px solid;
	overflow-x: scroll;
}

.filter {
	flex-shrink: 0;
	width: max-content;
	padding: 0 10px 0 10px;
	font-size: 12px;
	height: 30px;
	border-radius: 20px;
	text-align: center;
	margin: 0 5px;
	background-color: #F5F5F5;
	justify-content: space-around;
	align-items: center;
}

.filter-text {
	margin-left: 20px;
	font-size: 15px;
}

.overlay{
	position: fixed;
	width: 100vw;
	left:0;
	height: 100vh;
	background-color: rgba(0,0,0,0.8);
	z-index: 20;
}
.filter-selected {
	background-color: #9B0000;
	color: white;
}

.department {
	height: 40px;
	width: 70vw;
	font-size: 18px;
	font-weight: 700;
	text-overflow: ellipsis;
	white-space: nowrap;
	overflow: hidden;
	line-height: 40px;
}

.box {
	margin-bottom: 10px;
}

.course-list-box {
	overflow-y: auto;
	left: 0;
	margin-left: 85vw;
	width: 100vw;
	height: calc(100vh - 56px);
	background-color: #F5F5F5;
	z-index:2;
	padding-bottom: 5px;
}

.filter-button {
	height: 50px;
	line-height: 50px;
	font-size: 12px;
	color: #1684FC;
	margin-left: 10%;
}

.suggest-box{
	width: 100vw;
	height: 40px;
	border-top:1px #F5F5F5 solid;
	box-sizing: border-box;
	align-items: center;
	flex-shrink: 0;
}

.suggest-box-course-num{
	display: flex;
	font-size: 17px;
	margin-left: 10px;
	line-height: 40px;
	width:auto;
	height: 40px;
	font-weight: 700;
	flex-shrink: 0;
}

.suggest-box-course-name{
	font-size:14px;
	height: 40px;
	color:#ccc;
	text-overflow: ellipsis;
	white-space: nowrap;
	overflow: hidden;
	padding-left: 10px;
	line-height: 40px;
}

